--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </audio>
 
   <div class="container">
-    <h1>🌸 Hola... Tengo algo que decirte 🌸</h1>
+    <h1>🌸 Hola Mi amor... Tengo algo que decirte 🌸</h1>
 
     <div class="carta">
       <p>
