--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </audio>
 
   <div class="container">
-    <h1>🌸 Hola Mi amor... Tengo algo que decirte 🌸</h1>
+    <h1>🌸 Hola, mi amorcito... Tengo algo que decirte 🌸</h1>
 
     <div class="carta">
       <p>
@@ -113,8 +113,8 @@
       </p>
     </div>
 
-    <button class="yes" onclick="responder('La respuesta es: SIIIIII 😭')">La respuesta es SIII</button>
-    <button class="no" onclick="responder('La respuesta es: NOOOO 😭')">La respuesta es NOOO</button>
+    <button class="yes" onclick="responder('Prometo nunca fallarte y una lealtad enorme')">La respuesta es SIII</button>
+    <button class="no" onclick="responder('¿Cómo de que no? Pues de igual forma serás mi novia')">La respuesta es NOOO</button>
 
     <div id="respuestaFinal"></div>
   </div>
