--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>¿Quieres ser mi novia?</title>
+  <title>Carta para MIMI <3</title>
   <style>
     html, body {
       margin: 0;
@@ -114,7 +114,7 @@
     </div>
 
     <button class="yes" onclick="responder('Prometo nunca fallarte y una lealtad enorme')">La respuesta es SIII</button>
-    <button class="no" onclick="responder('¿Cómo de que no? Pues de igual forma serás mi novia')">La respuesta es NOOO</button>
+    <button class="no" onclick="responder('¿Cómo de que no? Pues de igual forma serás mi novia.')">La respuesta es NOOO</button>
 
     <div id="respuestaFinal"></div>
   </div>
