--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       </p>
     </div>
 
-    <button class="yes" onclick="responder('Prometo nunca fallarte y una lealtad enorme')">La respuesta es SIII</button>
-    <button class="no" onclick="responder('¿Cómo de que no? Pues de igual forma serás mi novia.')">La respuesta es NOOO</button>
+    <button class="yes" onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.')">La respuesta es SIII</button>
+    <button class="no" onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.')">La respuesta es NOOO</button>
 
     <div id="respuestaFinal"></div>
   </div>
