--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carta para MIMI <3</title>
   <style>
     html, body {
@@ -15,9 +16,24 @@
       overflow: hidden;
     }
 
+    /* 🎬 Animación de entrada */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: aparecer 1.2s ease forwards;
+    }
+
+    @keyframes aparecer {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     .container {
       position: relative;
       top: 10%;
+      width: 90%;
       max-width: 600px;
       margin: auto;
       background: rgba(255, 255, 255, 0.9);
@@ -29,6 +45,8 @@
 
     h1 {
       color: #e91e63;
+      font-size: 2em;
+      margin: 0 0 15px 0;
     }
 
     .carta {
@@ -37,18 +55,26 @@
       border-radius: 15px;
       margin: 20px 0;
       text-align: left;
-      font-size: 18px;
+      font-size: 1em;
       color: #333;
     }
 
     button {
-      font-size: 18px;
-      padding: 10px 20px;
-      margin: 10px;
+      font-size: 1em;
+      padding: 12px 24px;
+      margin: 8px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
+      width: calc(100% - 40px);
+      max-width: 250px;
+      box-shadow: 0 0 0px rgba(0,0,0,0);
+    }
+
+    button:hover {
+      box-shadow: 0 0 10px rgba(233, 30, 99, 0.6);
+      transform: scale(1.03);
     }
 
     .yes {
@@ -64,7 +90,7 @@
     #respuestaFinal {
       font-weight: bold;
       margin-top: 20px;
-      font-size: 20px;
+      font-size: 1.2em;
       color: #e91e63;
     }
 
@@ -92,6 +118,27 @@
         opacity: 0;
       }
     }
+
+    @media screen and (max-width: 480px) {
+      h1 {
+        font-size: 1.5em;
+      }
+
+      .carta {
+        font-size: 0.95em;
+        padding: 15px;
+      }
+
+      button {
+        font-size: 0.95em;
+        padding: 10px;
+        width: 90%;
+      }
+
+      #respuestaFinal {
+        font-size: 1em;
+      }
+    }
   </style>
 </head>
 <body onclick="playMusic()">
@@ -100,7 +147,7 @@
     <source src="https://cdn.pixabay.com/download/audio/2023/03/29/audio_d8f8274702.mp3?filename=warm-spring-145979.mp3" type="audio/mpeg">
   </audio>
 
-  <div class="container">
+  <div class="container fade-in">
     <h1>🌸 Hola, mi amorcito... Tengo algo que decirte 🌸</h1>
 
     <div class="carta">
