--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       overflow: hidden;
     }
 
-    /* 🎬 Animación de entrada */
     .fade-in {
       opacity: 0;
       transform: translateY(20px);
@@ -46,7 +45,7 @@
     h1 {
       color: #e91e63;
       font-size: 2em;
-      margin: 0 0 15px 0;
+      margin-bottom: 15px;
     }
 
     .carta {
@@ -143,8 +142,8 @@
 </head>
 <body onclick="playMusic()">
 
-  <audio id="musica" loop>
-    <source src="https://cdn.pixabay.com/download/audio/2023/03/29/audio_d8f8274702.mp3?filename=warm-spring-145979.mp3" type="audio/mpeg">
+  <audio id="musica" autoplay loop>
+    <source src="musica.mp3" type="audio/mpeg">
   </audio>
 
   <div class="container fade-in">
@@ -188,5 +187,7 @@
       document.body.appendChild(petal);
     }
   </script>
+</body>
+</html>
 </body>
 </html>
