--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 
     <div class="carta">
       <p>
-        Durante todo este tiempo contigo, la verdad es que he ido descubriendo muchísimas cosas de ti, y para ser sincero, me he dado cuenta de que entre más te conozco, más quiero que seas tú la mujer con la que quiero estar en forma de una novia. <br><br>
-        Cada día me despierto más convencido de que te elijo a ti, cada día mi corazón se siente más enamorado de ti, y eso es algo inevitable. <br><br>
-        Mejoras mi vida, me inspiras a ser mejor. <br><br>
-        Definitivamente es contigo, hagamos que esto funcione. <br><br>
+        Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado. <br><br>
+        Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú. <br><br>
+        No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.<br><br>
+        Por todo esto, y con todo mi corazón, quiero preguntarte: <br><br>
         <strong>¿Te gustaría que esto escalara a algo más y fuéramos novios?</strong>
       </p>
     </div>
