--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </audio>
 
   <div class="container fade-in">
-    <h1>🌸 Hola, mi amorcito... Tengo algo que decirte 🌸</h1>
+    <h1>🌸 Desde hace tiempo quería decirte algo que llevo muy adentro de mi corazón 🌸</h1>
 
     <div class="carta">
       <p>
