--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Carta para MIMI <3</title>
 
-  <!-- Bootstrap 5 -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
   <style>
     body {
@@ -40,6 +43,15 @@
       text-align: left;
     }
 
+    .mensaje {
+      background-color: #fce4ec;
+      border-left: 5px solid #e91e63;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      animation: fadeInUp 1s ease;
+    }
+
     .petal {
       position: fixed;
       top: -50px;
@@ -55,57 +67,50 @@
     }
 
     @keyframes fall {
-      0% {
-        transform: translateY(0) rotate(0deg);
-        opacity: 0.8;
-      }
-      100% {
-        transform: translateY(110vh) rotate(360deg);
-        opacity: 0;
-      }
-    }
-
-    @media screen and (max-width: 480px) {
-      h1 { font-size: 1.5em; }
-      .carta { font-size: 0.95em; padding: 15px; }
+      0% { transform: translateY(0) rotate(0deg); opacity: 0.8; }
+      100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
     }
   </style>
 </head>
 <body onclick="playMusic()">
 
-  <!-- Música de fondo -->
-  <audio id="musica" autoplay loop>
-    <source src="musica.mp3" type="audio/mpeg">
-  </audio>
+  <!-- Música con controles -->
+  <div class="container mt-3">
+    <label class="form-label text-light">🌸 Música que me recuerda a ti:</label>
+    <audio id="musica" controls class="w-100 rounded border">
+      <source src="musica.mp3" type="audio/mpeg">
+    </audio>
+  </div>
 
-  <div class="container mt-5 fade-in">
+  <!-- Carta principal -->
+  <div class="container mt-4 fade-in">
     <div class="card shadow-lg p-4 rounded" style="background-color: rgba(255,255,255,0.9);">
-      <h1 class="text-danger mb-3">🌸 Desde hace tiempo quería decirte algo que llevo muy adentro de mi corazón 🌸</h1>
+      <h1 class="text-danger mb-3 animate__animated animate__heartBeat">🌸 Desde hace tiempo quería decirte algo... 🌸</h1>
 
-      <div class="carta mb-4">
-        <p>
-          Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza, me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu risa, o tu manera de ver el mundo... Es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado. <br><br>
-          Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en mi vida, que tengo una razón más para luchar por todo. <br><br>
-          No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos, también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y dartelo mejor de mí, no porque me sienta obligado, sino porque me nace hacerlo. <br><br>
-          Por todo esto, y con todo mi corazón, quiero preguntarte: <br><br>
-          <strong>¿Te gustaría que esto escalara a algo más y fuéramos novios?</strong>
-        </p>
+      <div class="carta">
+        <div class="mensaje">Cada momento que paso contigo, cada conversación, cada risa compartida...</div>
+        <div class="mensaje">Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo.</div>
+        <div class="mensaje">Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí.</div>
+        <div class="mensaje"><strong>¿Te gustaría que esto escalara a algo más y fuéramos novios?</strong></div>
       </div>
 
-      <button class="btn btn-success w-100 mb-3" onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.')">La respuesta es SIII</button>
-      <button class="btn btn-danger w-100" onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.')">La respuesta es NOOO</button>
+      <button class="btn btn-success w-100 mb-3" onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'corazon.gif')">La respuesta es SIII</button>
+      <button class="btn btn-danger w-100" onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'triste.gif')">La respuesta es NOOO</button>
     </div>
   </div>
 
-  <!-- Modal Bootstrap -->
+  <!-- Modal interactivo -->
   <div class="modal fade" id="respuestaModal" tabindex="-1">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header bg-light">
-          <h5 class="modal-title text-primary">Tu respuesta 🥺</h5>
+          <h5 class="modal-title text-danger">💌 Tu respuesta</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
-        <div class="modal-body" id="modalTexto"></div>
+        <div class="modal-body text-center">
+          <div class="fs-4 mb-3" id="modalTexto"></div>
+          <img id="modalImagen" src="" class="img-fluid rounded" alt="Emoción">
+        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
         </div>
@@ -121,8 +126,9 @@
       });
     }
 
-    function responder(texto) {
+    function responder(texto, imagenURL) {
       document.getElementById("modalTexto").textContent = texto;
+      document.getElementById("modalImagen").src = imagenURL;
       let modal = new bootstrap.Modal(document.getElementById("respuestaModal"));
       modal.show();
     }
