--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
       <h1 class="text-danger mb-3 animate__animated animate__heartBeat">🌸 Desde hace tiempo quería decirte algo... 🌸</h1>
 
       <div class="carta">
-        <div class="mensaje">Cada momento que paso contigo, cada conversación, cada risa compartida...</div>
-        <div class="mensaje">Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo.</div>
-        <div class="mensaje">Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí.</div>
+        <div class="mensaje">Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado.</div>
+        <div class="mensaje">Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú.</div>
+        <div class="mensaje">No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.</div>
+        <div class="mensaje"> Por todo esto, y con todo mi corazón, quiero preguntarte:</div>
         <div class="mensaje"><strong>¿Te gustaría que esto escalara a algo más y fuéramos novios?</strong></div>
       </div>
 
