--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Carta para MIMI <3</title>
 
-  <!-- Bootstrap -->
+  <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -34,22 +34,27 @@
       }
     }
 
-    .carta {
-      background: #fff0f5;
-      padding: 20px;
-      border-radius: 15px;
+    #escritura {
+      overflow: hidden;
+      border-right: .15em solid #e91e63;
+      white-space: nowrap;
+      margin: 0 auto;
+      letter-spacing: .05em;
+      animation: escribir 4s steps(60, end), parpadeo 0.75s step-end infinite;
       font-size: 1em;
+      max-width: 100%;
       color: #333;
-      text-align: left;
+      padding-bottom: 15px;
     }
 
-    .mensaje {
-      background-color: #fce4ec;
-      border-left: 5px solid #e91e63;
-      padding: 15px;
-      margin: 10px 0;
-      border-radius: 10px;
-      animation: fadeInUp 1s ease;
+    @keyframes escribir {
+      from { width: 0 }
+      to { width: 100% }
+    }
+
+    @keyframes parpadeo {
+      from, to { border-color: transparent }
+      50% { border-color: #e91e63 }
     }
 
     .petal {
@@ -70,6 +75,10 @@
       0% { transform: translateY(0) rotate(0deg); opacity: 0.8; }
       100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
     }
+
+    .modal-content.animate__animated {
+      animation-duration: 1s;
+    }
   </style>
 </head>
 <body onclick="playMusic()">
@@ -88,29 +97,38 @@
       <h1 class="text-danger mb-3 animate__animated animate__heartBeat">🌸 Desde hace tiempo quería decirte algo... 🌸</h1>
 
       <div class="carta">
-        <div class="mensaje">Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado.</div>
-        <div class="mensaje">Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú.</div>
-        <div class="mensaje">No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.</div>
-        <div class="mensaje"> Por todo esto, y con todo mi corazón, quiero preguntarte:</div>
-        <div class="mensaje"><strong>¿Te gustaría que esto escalara a algo más y fuéramos novios?</strong></div>
+        <div id="escritura">
+          Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado.
+          Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú.
+          No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.
+          Por todo esto, y con todo mi corazón, quiero preguntarte: 
+          ¿Te gustaría que esto escalara a algo más y fuéramos novios?
+        </div>
       </div>
 
-      <button class="btn btn-success w-100 mb-3" onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'corazon.gif')">La respuesta es SIII</button>
-      <button class="btn btn-danger w-100" onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'triste.gif')">La respuesta es NOOO</button>
+      <button class="btn btn-success w-100 mb-3"
+        onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media.tenor.com/fJ76eNKqvFMAAAAM/pink-heart.gif')">
+        La respuesta es SIII
+      </button>
+
+      <button class="btn btn-danger w-100"
+        onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'https://media.tenor.com/F5qpZHSg_NwAAAAM/колобокicq.gif')">
+        La respuesta es NOOO
+      </button>
     </div>
   </div>
 
-  <!-- Modal interactivo -->
-  <div class="modal fade" id="respuestaModal" tabindex="-1">
+  <!-- Modal interactivo con animación -->
+  <div class="modal fade animate__animated animate__fadeInDown" id="respuestaModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
+      <div class="modal-content animate__animated animate__fadeInUp">
         <div class="modal-header bg-light">
           <h5 class="modal-title text-danger">💌 Tu respuesta</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body text-center">
           <div class="fs-4 mb-3" id="modalTexto"></div>
-          <img id="modalImagen" src="" class="img-fluid rounded" alt="Emoción">
+          <img id="modalImagen" src="" class="img-fluid rounded d-none" alt="Respuesta emocional">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -119,6 +137,7 @@
     </div>
   </div>
 
+  <!-- Pétalos flotando + Scripts -->
   <script>
     function playMusic() {
       const music = document.getElementById("musica");
@@ -128,8 +147,13 @@
     }
 
     function responder(texto, imagenURL) {
-      document.getElementById("modalTexto").textContent = texto;
-      document.getElementById("modalImagen").src = imagenURL;
+      const textoElemento = document.getElementById("modalTexto");
+      const imagenElemento = document.getElementById("modalImagen");
+
+      textoElemento.textContent = texto;
+      imagenElemento.src = imagenURL;
+      imagenElemento.classList.remove("d-none");
+
       let modal = new bootstrap.Modal(document.getElementById("respuestaModal"));
       modal.show();
     }
