--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Carta para MIMI <3</title>
 
   <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Animate.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
   <style>
     body {
-      background: url('sakura.jpg') no-repeat center center fixed;
+      background: url("sakura.jpg") no-repeat center center fixed;
       background-size: cover;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Segoe UI", sans-serif;
       text-align: center;
       overflow: hidden;
     }
@@ -34,27 +40,13 @@
       }
     }
 
-    #escritura {
-      overflow: hidden;
-      border-right: .15em solid #e91e63;
-      white-space: nowrap;
-      margin: 0 auto;
-      letter-spacing: .05em;
-      animation: escribir 16s steps(250, end), parpadeo 0.75s step-end infinite;
+    .carta {
+      background: #fff0f5;
+      padding: 20px;
+      border-radius: 15px;
       font-size: 1em;
-      max-width: 100%;
       color: #333;
-      padding-bottom: 15px;
-    }
-
-    @keyframes escribir {
-      from { width: 0 }
-      to { width: 100% }
-    }
-
-    @keyframes parpadeo {
-      from, to { border-color: transparent }
-      50% { border-color: #e91e63 }
+      text-align: left;
     }
 
     .petal {
@@ -62,7 +54,7 @@
       top: -50px;
       width: 30px;
       height: 30px;
-      background-image: url('petalos.png');
+      background-image: url("petalos.png");
       background-size: contain;
       background-repeat: no-repeat;
       opacity: 0.8;
@@ -72,8 +64,14 @@
     }
 
     @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); opacity: 0.8; }
-      100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
+      0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 0.8;
+      }
+      100% {
+        transform: translateY(110vh) rotate(360deg);
+        opacity: 0;
+      }
     }
 
     .modal-content.animate__animated {
@@ -82,62 +80,112 @@
   </style>
 </head>
 <body onclick="playMusic()">
-
-  <!-- Música con controles -->
+  <!-- Música de fondo -->
   <div class="container mt-3">
     <label class="form-label text-light">🌸 Música que me recuerda a ti:</label>
     <audio id="musica" controls class="w-100 rounded border">
-      <source src="musica.mp3" type="audio/mpeg">
+      <source src="musica.mp3" type="audio/mpeg" />
     </audio>
   </div>
 
   <!-- Carta principal -->
   <div class="container mt-4 fade-in">
-    <div class="card shadow-lg p-4 rounded" style="background-color: rgba(255,255,255,0.9);">
-      <h1 class="text-danger mb-3 animate__animated animate__heartBeat">🌸 Desde hace tiempo quería decirte algo... 🌸</h1>
+    <div
+      class="card shadow-lg p-4 rounded"
+      style="background-color: rgba(255, 255, 255, 0.9)"
+    >
+      <h1 class="text-danger mb-3 animate__animated animate__heartBeat">
+        🌸 Desde hace tiempo quería decirte algo... 🌸
+      </h1>
 
-      <div class="carta">
-        <div id="escritura">
-          Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado. Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú. No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo. Por todo esto, y con todo mi corazón, quiero preguntarte: ¿Te gustaría que esto escalara a algo más y fuéramos novios?
-        </div>
+      <div class="carta text-start">
+        <p class="animate__animated animate__fadeInUp animate__delay-1s">
+          Cada momento que paso contigo, cada conversación, cada risa
+          compartida, cada gesto tuyo, me hace sentir algo que no puedo
+          explicar del todo con palabras, pero que sé con certeza: me estoy
+          enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa,
+          o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de
+          las cosas más bonitas que me ha pasado.
+        </p>
+        <p class="animate__animated animate__fadeInUp animate__delay-2s">
+          Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí
+          mismo. Cuando estoy contigo siento que todo es posible, que hay más
+          color en la vida, que tengo una razón más para luchar por mis sueños.
+          Y esa razón eres tú.
+        </p>
+        <p class="animate__animated animate__fadeInUp animate__delay-3s">
+          No se trata solo de lo que siento por ti, sino de lo que quiero
+          construir contigo. Quiero acompañarte en tus días buenos y también en
+          los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo
+          mejor de mí, no porque me sienta obligado, sino porque nace de mí
+          hacerlo.
+        </p>
+        <p
+          class="animate__animated animate__fadeInUp animate__delay-4s fw-bold text-danger"
+        >
+          Por todo esto, y con todo mi corazón, quiero preguntarte:<br />
+          ¿Te gustaría que esto escalara a algo más y fuéramos novios?
+        </p>
       </div>
 
-      <button class="btn btn-success w-100 mb-3"
-        onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media.tenor.com/fJ76eNKqvFMAAAAM/pink-heart.gif')">
+      <button
+        class="btn btn-success w-100 mb-3 animate__animated animate__fadeInUp animate__delay-5s"
+        onclick="responder('Prometo nunca fallarte y una lealtad enorme, así como un amor incondicional dispuesto a mejorar por ti.', 'https://media.tenor.com/fJ76eNKqvFMAAAAM/pink-heart.gif')"
+      >
         La respuesta es SIII
       </button>
 
-      <button class="btn btn-danger w-100"
-        onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'https://media.tenor.com/F5qpZHSg_NwAAAAM/колобокicq.gif')">
+      <button
+        class="btn btn-danger w-100 animate__animated animate__fadeInUp animate__delay-6s"
+        onclick="responder('Bueno, entonces mándame un video haciendo un mortal triple para confirmar el NO.', 'https://media.tenor.com/F5qpZHSg_NwAAAAM/колобокicq.gif')"
+      >
         La respuesta es NOOO
       </button>
     </div>
   </div>
 
-  <!-- Modal interactivo con animación -->
-  <div class="modal fade animate__animated animate__fadeInDown" id="respuestaModal" tabindex="-1">
+  <!-- Modal interactivo -->
+  <div
+    class="modal fade animate__animated animate__fadeInDown"
+    id="respuestaModal"
+    tabindex="-1"
+  >
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content animate__animated animate__fadeInUp">
         <div class="modal-header bg-light">
           <h5 class="modal-title text-danger">💌 Tu respuesta</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+          ></button>
         </div>
         <div class="modal-body text-center">
           <div class="fs-4 mb-3" id="modalTexto"></div>
-          <img id="modalImagen" src="" class="img-fluid rounded d-none" alt="Respuesta emocional">
+          <img
+            id="modalImagen"
+            src=""
+            class="img-fluid rounded d-none"
+            alt="Respuesta emocional"
+          />
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Cerrar
+          </button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Pétalos flotando + Scripts -->
   <script>
     function playMusic() {
       const music = document.getElementById("musica");
-      music.play().catch(error => {
+      music.play().catch((error) => {
         console.log("Reproducción bloqueada por el navegador:", error);
       });
     }
@@ -150,7 +198,9 @@
       imagenElemento.src = imagenURL;
       imagenElemento.classList.remove("d-none");
 
-      let modal = new bootstrap.Modal(document.getElementById("respuestaModal"));
+      let modal = new bootstrap.Modal(
+        document.getElementById("respuestaModal")
+      );
       modal.show();
     }
 
