--- a/index.html
+++ b/index.html
@@ -43,31 +43,6 @@
       text-align: left;
     }
 
-    /* Máquina de escribir por párrafo */
-    .typewriter p {
-      overflow: hidden;
-      white-space: nowrap;
-      border-right: .15em solid #e91e63;
-      animation: typing 5s steps(100, end), blink-caret 0.75s step-end infinite;
-      font-size: 1em;
-      margin-bottom: 20px;
-    }
-
-    .typewriter p:nth-child(2) { animation-delay: 5.5s; }
-    .typewriter p:nth-child(3) { animation-delay: 11s; }
-    .typewriter p:nth-child(4) { animation-delay: 16.5s; }
-
-    @keyframes typing {
-      from { width: 0 }
-      to { width: 100% }
-    }
-
-    @keyframes blink-caret {
-      from, to { border-color: transparent }
-      50% { border-color: #e91e63 }
-    }
-
-    /* Pétalos flotantes */
     .petal {
       position: fixed;
       top: -50px;
@@ -109,20 +84,11 @@
         🌸 Desde hace tiempo quería decirte algo... 🌸
       </h1>
 
-      <div class="carta text-start typewriter">
-        <p>
-          Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado.
-        </p>
-        <p>
-          Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú.
-        </p>
-        <p>
-          No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.
-        </p>
-        <p class="fw-bold text-danger">
-          Por todo esto, y con todo mi corazón, quiero preguntarte:<br />
-          ¿Te gustaría que esto escalara a algo más y fuéramos novios?
-        </p>
+      <div class="carta text-start">
+        <div id="parrafo1"></div>
+        <div id="parrafo2"></div>
+        <div id="parrafo3"></div>
+        <div id="parrafo4" class="fw-bold text-danger"></div>
       </div>
 
       <!-- Botones ocultos que aparecen después -->
@@ -180,6 +146,30 @@
       modal.show();
     }
 
+    const textos = [
+      "Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado.",
+      "Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú.",
+      "No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.",
+      "Por todo esto, y con todo mi corazón, quiero preguntarte:<br />¿Te gustaría que esto escalara a algo más y fuéramos novios?"
+    ];
+
+    function escribirTexto(elementId, texto, delay) {
+      const el = document.getElementById(elementId);
+      let i = 0;
+      setTimeout(() => {
+        const interval = setInterval(() => {
+          el.innerHTML += texto.charAt(i);
+          i++;
+          if (i === texto.length) clearInterval(interval);
+        }, 40);
+      }, delay);
+    }
+
+    escribirTexto("parrafo1", textos[0], 0);
+    escribirTexto("parrafo2", textos[1], 5500);
+    escribirTexto("parrafo3", textos[2], 11000);
+    escribirTexto("parrafo4", textos[3], 16500);
+
     // Pétalos flotantes
     const cantidadPetalos = 20;
     for (let i = 0; i < cantidadPetalos; i++) {
@@ -195,7 +185,7 @@
     setTimeout(() => {
       const botones = document.getElementById("botones");
       botones.style.display = "block";
-    }, 22000); // ajusta si cambias tiempo de animación
+    }, 22000);
   </script>
 </body>
 </html>
