--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
       "Cada momento que paso contigo, cada conversación, cada risa compartida, cada gesto tuyo, me hace sentir algo que no puedo explicar del todo con palabras, pero que sé con certeza: me estoy enamorando de ti cada vez más. No es solo tu forma de ser, tu sonrisa, o tu manera de ver el mundo... es todo tú. Conocerte ha sido una de las cosas más bonitas que me ha pasado.",
       "Me inspiras. Me motivas. Me haces querer ser una mejor versión de mí mismo. Cuando estoy contigo siento que todo es posible, que hay más color en la vida, que tengo una razón más para luchar por mis sueños. Y esa razón eres tú.",
       "No se trata solo de lo que siento por ti, sino de lo que quiero construir contigo. Quiero acompañarte en tus días buenos y también en los no tan buenos. Quiero verte feliz, apoyarte, cuidarte y darte lo mejor de mí, no porque me sienta obligado, sino porque nace de mí hacerlo.",
-      "Por todo esto, y con todo mi corazón, quiero preguntarte:"
-      "¿Te gustaría que esto escalara a algo más y fuéramos novios?"
+      "Por todo esto, y con todo mi corazón, quiero preguntarte: ¿Te gustaría que esto escalara a algo más y fuéramos novios?"
     ];
 
     function escribirTexto(elementId, texto, delay) {
