--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <!-- Música con controles -->
   <div class="container mt-3">
-    <label class="form-label text-light">🌸 Música que me recuerda a ti:</label>
+    <label class="form-label text-light">Música que me recuerda a ti:</label>
     <audio id="musica" controls class="w-100 rounded border">
       <source src="musica.mp3" type="audio/mpeg" />
     </audio>
@@ -168,7 +168,7 @@
     escribirTexto("parrafo1", textos[0], 0);
     escribirTexto("parrafo2", textos[1], 14600);
     escribirTexto("parrafo3", textos[2], 24500);
-    escribirTexto("parrafo4", textos[3], 30500);
+    escribirTexto("parrafo4", textos[3], 35500);
 
     // Pétalos flotantes
     const cantidadPetalos = 20;
@@ -185,7 +185,7 @@
     setTimeout(() => {
       const botones = document.getElementById("botones");
       botones.style.display = "block";
-    }, 22000);
+    }, 35600);
   </script>
 </body>
 </html>
